# NeoHCM

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
e2e/: package.json  playwright.config.ts
e2e/tests/: onboarding.spec.ts
neohcm/: ENHANCEMENTS.md  MANIFEST.in  MANIFEST_NE0HCM_FIX.md  README.md  boot.py  hooks.py  modules.txt  patches.txt  permissions.py  uninstall.py
neohcm/api/: brand.py  onboarding.py
neohcm/config/: desktop.py
neohcm/data/: neohcm_employee_import_template.csv  neohcm_employment_history_import_template.csv
neohcm/docs/: SETUP_GUIDE.md  USER_MANUAL.md
neohcm/doctype/neohcm_settings/: neohcm_settings.json
neohcm/fixtures/: form_tour.json  role.json  role_profile.json
neohcm/neo_hcm/doctype/neo_hcm_onboarding/: neo_hcm_onboarding.py
neohcm/neo_hcm/doctype/neohcm_employee/: neohcm_employee.json  neohcm_employee.py
neohcm/neo_hcm/doctype/neohcm_employment_history/: neohcm_employment_history.json  neohcm_employment_history.py
neohcm/neo_hcm/doctype/neohcm_onboarding/: neohcm_onboarding.json
neohcm/neo_hcm/doctype/neohcm_settings/: neohcm_settings.json  neohcm_settings.py
neohcm/neo_hcm/page/neo-brand-setup/: neo_brand_setup.js  neo_brand_setup.json
neohcm/neo_hcm/page/neo-hcm-onboarding/: neo-hcm-onboarding.js  neo-hcm-onboarding.json
neohcm/patches/: create_custom_fields.py
neohcm/public/: neohcm.css  neohcm.js
neohcm/startup/: desk.js
neohcm/translations/: ar.csv
(+11 files in other folders)
